# son8-core_lib

./: CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
changes/: README.md
include/son8/: core.hxx
include/son8/core/: alias.hxx  cloak.hxx
include/son8/core/alias/: data.hxx  pour.hxx
source/: CMakeLists.txt
